--- a/gp_print.css
+++ b/gp_print.css
@@ -17,9 +17,17 @@
 
 
 /* Hidden Objects */
-
-
-
+nav, footer, article {
+    display: none;
+}
+ 
+section#sheet {
+    width: 6in;
+    margin-bottom: 0in;
+    margin-top: 0in;
+    margin-right: auto;
+    margin-left: auto;
+}
 
 
 
