--- a/gp_print.css
+++ b/gp_print.css
@@ -42,7 +42,7 @@ img.size4 {
     width: 1.5in;
 }
 
-
+/* All of these styles made it therefore if you printed out this sheet it would look how it necessarily should */
 
 /* Comic Book Sheet Styles */
 
